# DieHard

./: .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  Makefile.win32  NEWS  OPTIMIZATIONS.md  README.md  TODO.md
src/: CMakeLists.txt  Makefile  compile-win.cmd  libdieharder.cpp
src/archipelago/: .cdtproject  .common  .project  COMPILE_FLAGS  Makefile.old  README.md  TODO  coldcache.h  freedpagetracker.h  internalheap.h  libsparseheaps.cc  livepagetracker.h  objectperpageheap.cc  objectperpageheap.h  pagedescription.h  signals.cc  signals.h  sparseheaps.h
src/archipelago/allocator/: allocationclockheap.h  bitmapheap.h  coloringheap.h  fixedactiveheap.h  fixedsizeobjheap.h  heap.h  mmappoolheap.h  safeinitheap.h  singletonheap.h  sizeinmapheap.h
src/archipelago/benchmarks/: .cvsignore  Makefile  SpecFileCreator.java  working_set.sh
src/archipelago/benchmarks/bftpd/: ftp_client.py  ftpdpassword  run-benchmark  start_server  stop_server
src/archipelago/benchmarks/cfrac/: Makefile  README  asm16bit.h  atop.c  cfrac-custom  cfrac-native  cfrac-qih  cfrac.c  errorp.c  getopt.c  itop.c  ltop.c  pabs.c  padd.c  pcfrac.c  pcmp.c  pconst.c  pcvt.h  pdefs.h  pdivmod.c  pfactor.c  pfactor.h  pfloat.c  pgcd.c  phalf.c  picmp.c  pidiv.c  pimod.c  pio.c  pmul.c  pneg.c  podd.c  pops.c  ppowmod.c  precision.h  primes.c  primes.h  psqrt.c  psub.c  ptoa.c  (+4 more)
src/archipelago/benchmarks/espresso/: .gdbinit  Makefile  cols.c  correct.out  cvrin.c  cvrm.c  cvrmisc.c  cvrout.c  dominate.c  espresso-custom  (+33 more)
src/archipelago/brokenmalloc/: Makefile  bumpalloc.h  libbrokenmalloc.cpp  liboverflowinjector.cpp  libtrackalloc.cpp  mmapalloc.h  oneheap.h  randomnumbergenerator.h  realrandomvalue.h  wrapper.cpp
src/archipelago/dlmalloc272/: .cvsignore  Makefile  dlmalloc.c  dlmalloc.h
src/archipelago/doc/: 07-44.txt  DieHard-NearInfiniteHeaps.doc  clones.bib  clones2.bib  cramm.bib  emery.bib  experiments.xls  gcbib.bib  heap.dia  mockcurve.fig  mockhist.fig  page-state-diagram.ygf  qih-dacapo.odp  qih-dacapo.ppt  qih-outline.doc  qih.foo  qih.tex  qih_dhstyle.tex  sig-alternate.cls  sigplanconf.cls
src/archipelago/other/: Makefile  arch.dia  breakpoints  dacapo-results.tgz  gdb-libtest  iv_test.cc  vmcomm_test.c
src/archipelago/tools/: LICENSE.ptime  Makefile  README  libmalloctrace.cpp  libmemtrace.cpp  lrusim.cpp  lrusim2.cpp  malloctrace.h  malloctrace2.h  memtrace.h  pmem.py  posixrecursivelock.h  ptime-orig.c  ptime.c  stock_mlockmem.c
src/archipelago/util/: Makefile  amd32_256k.h  asyncdiscard.cc  bitmap.h  futuretaskrunner.h  iv.c  iv.h  log.cc  log.h  madvisetask.h  marsaglia.h  mman.cc  mman.h  myassert.h  myqueue.h  p4ht.h  pagequeue.h  processor.h  randomnumbergenerator.cc  randomnumbergenerator.h  util.cc  util.h  vmcomm.c  vmcomm.h
src/exterminator/: README
src/exterminator/src/: Doxyfile  Makefile  bitmap.h  checkpoweroftwo.h  compile  core_helper.c  correct.h  cpuinfo.h  diehard.cpp  diehard.h  find_bugs.pl  libdiehard.cpp  log2.h  marsaglia.h  mmapalloc.h  mostcommonelement.h  overflow_test.pl  partitioninfo.h  platformspecific.h  randomnumbergenerator.h  selector.h  socket.h  spawnexecutable.cpp  staticif.h  staticlog.h  theoneheap.h  version.h  voter.cpp  wrapper.cpp
src/include/: array.h  bumpalloc.h  diefast.h  diehard.h  dieharder-pagetable.h  diehardheap.h  dynamichashtable.h  generate-bitstream.cpp  globalfreepool.h  heapregistry.h  largeheap.h  libriff.cpp  libshuffle.cpp  modulo.h  mypagetable.h  objectownership.h  pagetableentry.h  randomheap.h  randomminiheap-core.h  randomminiheap-diehard.h  randomminiheap-dieharder.h  randomminiheap.h  randommmap.h  scalableheap.h  shuffleheap.h  staticif.h  tlsfheap.h  tprintf.hh  visualize-canvas.cpp
src/include/diehard/: diehardheap.h  randomminiheap.h
src/include/dieharder/: diehardheap.h  randomminiheap.h
src/include/layers/: bufferedlockedheap.h  combineheap.h  debugheap.h  mmapalloc.h
src/include/math/: halflog2.h  log2.h  modulo.h
src/include/old/: cpuinfo.h  randomminiheap-diehard.h
src/include/rng/: mwc.h  mwc64.h  randomnumbergenerator.h  realrandomvalue.h  seedmanager.h  wyrand.h
src/include/static/: checkpoweroftwo.h  staticforloop.h  staticlog.h
src/include/util/: atomicbitmap.h  bitmap.cpp  bitmap.h  check.h  checkedarray.h  dynamichashtable.cpp  dynamichashtable.h  madvisewrapper.h  platformspecific.h
src/local/: diehard-project.aip
src/old/: ansiwrapper.h  largeheap.h  marsaglia.h  mwc.h  old-macwrapper.cpp  oneheap.h  pagetable.h  randomminiheap.h  reentrantheap.h  staticif.h
src/old/static/: atomic.h  compile-winhard.cmd  spinlock.h
src/original-diehard/: Makefile  Makefile.win32  README  checkpoweroftwo.h  diehard-system.cpp  diehard.cpp  diehard.h  diehardheap.h  gnuwrapper.cpp  heapshield.cpp  largeheap.h  lockheap.h  macwrapper.cpp  marsaglia.h  multiheap.cpp  randomheap.h  randomminiheap.h  randomnumbergenerator.h  realrandomvalue.h  sassert.h  staticlog.h  threadlocal.h  usewinhard.cpp  winhard.cpp  wrapper.cpp
src/original-diehard/madCodeHook/: madCHook.h  madCHook.lib
src/original-diehard/replicated/: pipetype.h  reader.cpp  socketproxy.cpp
src/original-diehard/static/: Makefile  compile  diehard.h  ifclass.h  libdiehard.cpp  partitioninfo.h  winhard.cpp
src/original-diehard/test/: disaster.cpp  test4.cpp  testsocket.cpp
src/original-diehard/util/: Makefile  compile-brokenmalloc  libbrokenmalloc.cpp  readlog.cpp  sizeheap.h
src/replicated/: Makefile  fingerprinter.h  replicated.cpp  selector.h
src/replicated/SocketProxy/: Client.java  ReadWrite.java  SocketProxy.java
src/source/: libdieharder.cpp
src/source/old/: oldlibdieharder.cpp
src/test/: brokenheap.h  danglingptr.cpp  disaster.cpp  doublefree.cpp  illegalread.cpp  malloc-verifier.cpp  mallocverify.cpp  test1.cpp  test3.cpp  test4.cpp
src/util/: addheap.h  bitstring.h  freelistheap.h  kingsleyheap.h  realmallocheap.h  segheap.h  sizeheap.h  stlallocator.h  wrapper.cpp
tests/: CMakeLists.txt  test_doublefree.cpp  test_globalfreepool.cpp  test_invalidfree.cpp  test_remote_free.cpp  threadtest.cpp
(+1290 files in other folders)
